--- a/src/components/PickerTemplate/PickerTemplate.css
+++ b/src/components/PickerTemplate/PickerTemplate.css
@@ -1,11 +1,11 @@
 .picker-popup {
   position: absolute;
   border-radius: 10px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
   padding: 20px 0px;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .picker-popup .small-close {
