--- a/src/components/EmptyState/EmptyState.css
+++ b/src/components/EmptyState/EmptyState.css
@@ -1,34 +1,339 @@
 .empty_state_wrapper {
-    height: 100vh;
-    width: 100%; 
-    display: flex;
-    align-items: center;
-    z-index: -1;
-    position: absolute;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  z-index: -1;
+  position: absolute;
 }
 
 .empty_state {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+}
 
-  .empty_state h1 {
-    font-family: 'quebecbold', Helvetica, Sans-Serif;
-    font-weight: normal;
-    margin: 10px auto;
-  }
+.empty_state h1 {
+  font-family: 'gilroyextrabold', Helvetica, Sans-Serif;
+  font-weight: normal;
+  margin: 10px auto 20px auto;
+  font-size: 27px;
+  letter-spacing: 1.05px;
+}
 
-   .empty_state h4 {
-    font-family: 'quebecregular', Helvetica, Sans-Serif;
-    font-weight: normal;
-    margin: 5px auto;
-  }
+.empty_state p {
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-weight: normal;
+  margin: 6px auto;
+  color: #4d4d4d;
+}
 
 .empty_state img {
-    height: 220px;
-    width: 220px;
-    text-align: center;
+  height: 220px;
+  width: 220px;
+  text-align: center;
+}
+
+.clearfix {
+  display: inline-block;
+}
+.clearfix::after {
+  content: '';
+  visibility: hidden;
+  display: inline-block;
+  font-size: 0;
+  clear: both;
+  height: 0;
+}
+.tekst {
+  color: #3a2012;
+  font-family: Arial, sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 28px;
+  font-weight: bold;
+  display: block;
+  letter-spacing: 2px;
+  max-width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  z-index: 99;
+}
+a {
+  color: #d67b32;
+  text-decoration: none;
+  cursor: pointer;
+}
+a:hover {
+  text-decoration: underline;
+}
+.outer {
+  display: table;
+  margin: 0 auto;
+  height: 100%;
+}
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+.main {
+  padding: 4px;
+}
+@media (max-width: 560px) {
+  .main {
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
   }
+}
+@media (max-width: 420px) {
+  .main {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+    min-width: 200px;
+  }
+  body,
+  html {
+    overflow-x: auto;
+  }
+}
+.squirrel {
+  position: relative;
+  width: 83px;
+  height: 107px;
+  margin-top: 130px;
+  margin-left: 70px;
+}
+.squirrel .skin {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 83px;
+  height: 107px;
+  background: #f99c3c;
+  border-radius: 0 55px 0 0;
+}
+.squirrel .ear {
+  position: absolute;
+  top: -25px;
+  width: 12.5px;
+  height: 25px;
+  background: #f99c3c;
+}
+.squirrel .ear.left {
+  left: -12.5px;
+  border-radius: 25px 0 0 25px;
+}
+.squirrel .ear.right {
+  left: 40px;
+  border-radius: 0 25px 25px 0;
+}
+.squirrel .eye {
+  position: absolute;
+  top: 25px;
+  width: 25px;
+  height: 25px;
+  background: #fefefe;
+  border-radius: 25px;
+}
+.squirrel .eye.left {
+  left: 12.5px;
+}
+.squirrel .eye.right {
+  right: 12.5px;
+}
+.squirrel .eye span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 13px;
+  height: 13px;
+  margin-top: -7.5px;
+  margin-left: -7.5px;
+  background: #3a2012;
+  border-radius: 13px;
+}
+.squirrel .belly {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 50px;
+  height: 25px;
+  margin-left: -25px;
+  background: #faba71;
+  border-radius: 25px 25px 0 0;
+}
+.squirrel .nose {
+  position: absolute;
+  top: 51.5px;
+  left: 50%;
+  width: 6px;
+  height: 3px;
+  margin-left: -3px;
+  background: #3a2012;
+  border-radius: 0 0 6px 6px;
+}
+.squirrel .mouth {
+  position: absolute;
+  top: 58px;
+  left: 50%;
+  width: 25px;
+  height: 12.5px;
+  margin-left: -12.5px;
+  background: #3a2012;
+  border-radius: 0 0 12.5px 12.5px;
+}
+.squirrel .mouth .tooth {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 13px;
+  height: 6.5px;
+  margin-left: -6.5px;
+  background: #fefefe;
+  border-radius: 0 0 7.5px 7.5px;
+}
+.squirrel .leg {
+  position: absolute;
+  bottom: 0;
+  width: 12.5px;
+  height: 6px;
+  background: #3a2012;
+  border-radius: 12.5px 12.5px 0 0;
+}
+.squirrel .leg.left {
+  left: 12.5px;
+}
+.squirrel .leg.right {
+  right: 12.5px;
+}
+.squirrel .tail {
+  position: absolute;
+  bottom: 0;
+  left: -55.5px;
+  width: 83px;
+  height: 155px;
+}
+.squirrel .tail .square {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 83px;
+  height: 155px;
+  background: #d67b32;
+  border-radius: 0 0 0 55px;
+}
+.squirrel .tail .square .sh {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 33px;
+  height: 155px;
+  background: #d67b32;
+  -moz-box-shadow: inset -30px 0 30px -30px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset -30px 0 30px -30px rgba(0, 0, 0, 0.2);
+  box-shadow: inset -30px 0 30px -30px rgba(0, 0, 0, 0.2);
+}
+.squirrel .tail .circle {
+  position: absolute;
+  top: -75px;
+  left: -69px;
+  width: 152px;
+  height: 152px;
+  background: #d67b32;
+  border-radius: 76px;
+  -webkit-transform: rotate(15deg);
+  transform: rotate(15deg);
+  -moz-box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
+}
+.squirrel .tail .circle::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 76px;
+  height: 76px;
+  background: #ad6326;
+  border-radius: 0 0 76px 0;
+}
+.squirrel .nut {
+  position: absolute;
+  bottom: 2.5px;
+  right: -27.5px;
+  width: 12.5px;
+  height: 15px;
+  background: #d47b33;
+  border-radius: 12.5px 0 0 12.5px;
+}
+.squirrel .nut .hood {
+  position: absolute;
+  bottom: -2.5px;
+  right: -10px;
+  width: 10px;
+  height: 20px;
+  background: #3a2012;
+  border-radius: 0 12.5px 12.5px 0;
+}
+.squirrel .nut .hood::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -7px;
+  width: 7.5px;
+  height: 4px;
+  margin-top: -1.5px;
+  background: #3a2012;
+  border-radius: 0 0 7.5px 7.5px;
+}
+.squirrel .eye span {
+  -webkit-animation: animation 10s infinite ease-in-out;
+  animation: animation 10s infinite ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+.squirrel:hover .eye span {
+  position: absolute;
+  top: 65%;
+  left: 65%;
+}
+@-webkit-keyframes animation {
+  0%,
+  4%,
+  6%,
+  49%,
+  51%,
+  53%,
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+  }
+  5%,
+  50%,
+  52% {
+    -webkit-transform: rotateX(90deg);
+    transform: rotateX(90deg);
+  }
+}
+@keyframes animation {
+  0%,
+  4%,
+  6%,
+  49%,
+  51%,
+  53%,
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+  }
+  5%,
+  50%,
+  52% {
+    -webkit-transform: rotateX(90deg);
+    transform: rotateX(90deg);
+  }
+}
