--- a/src/components/PriorityGoal/PriorityGoal.css
+++ b/src/components/PriorityGoal/PriorityGoal.css
@@ -1,12 +1,12 @@
 .priority-quadrant-goal-item {
   display: flex;
   flex-direction: row;
-  border-bottom: solid 1px #F2F2F2; 
+  border-bottom: solid 1px #f2f2f2;
   padding: 12px;
 }
 
 .priority-quadrant-goal-item:hover {
-  background: #F9F9F9;
+  background: #f9f9f9;
 }
 
 .priority-quadrant-goal-content {
@@ -32,7 +32,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .priority-quadrant-goal-icon {
@@ -88,17 +88,17 @@
 
 .weigh_in_button {
   padding: 4px;
-  margin-right: 10px; 
+  margin-right: 10px;
   margin-bottom: 0;
 }
 
 .priority-quadrant-goal-item .weigh_in_button {
-  display: none;
-  transition: all .3s;
+  opacity: 0;
+  transition: all 0.2s;
 }
 
 .priority-quadrant-goal-item:hover .weigh_in_button,
 .priority-quadrant-goal-item:focus .weigh_in_button {
-  display: block;
-  transition: all .3s;
+  opacity: 1;
+  transition: all 0.2s;
 }
