--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewNavBar/ExpandedViewNavBar.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewNavBar/ExpandedViewNavBar.css
@@ -15,18 +15,19 @@
   font-family: 'renner_mediummedium', Helvetica, sans-serif;
   font-weight: normal;
   cursor: pointer;
+  border-bottom: 3px solid transparent;
 }
 
 /* NavBar Item Hover State */
 
 .expanded-view-nav-bar-item:hover {
   color: #5f65ff;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .expanded-view-nav-bar-item:hover .icon:not(.not-hoverable) .inner-icon {
-  background-color: #5F65FF;
-  transition: all .3s;
+  background-color: #5f65ff;
+  transition: all 0.3s;
 }
 
 /* NavBar Item Active State */
@@ -37,7 +38,7 @@
 }
 
 .expanded-view-nav-bar-item.active-tab .icon:not(.not-hoverable) .inner-icon {
-  background-color: #5F65FF;
+  background-color: #5f65ff;
 }
 
 .expanded-view-nav-bar-item .icon.very-small.grey {
