--- a/src/components/EmptyState/EmptyState.css
+++ b/src/components/EmptyState/EmptyState.css
@@ -39,6 +39,7 @@
 .clearfix {
   display: inline-block;
 }
+
 .clearfix::after {
   content: '';
   visibility: hidden;
@@ -47,48 +48,28 @@
   clear: both;
   height: 0;
 }
-.tekst {
-  color: #3a2012;
-  font-family: Arial, sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 28px;
-  font-weight: bold;
-  display: block;
-  letter-spacing: 2px;
-  max-width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 20px;
-  left: 30px;
-  z-index: 99;
-}
-a {
-  color: #d67b32;
-  text-decoration: none;
-  cursor: pointer;
-}
-a:hover {
-  text-decoration: underline;
-}
-.outer {
+
+.empty_state_squirrel_outer {
   display: table;
   margin: 0 auto;
   height: 100%;
 }
-.middle {
+
+.empty_state_squirrel_middle {
   display: table-cell;
   vertical-align: middle;
 }
-.main {
+.empty_state_squirrel_main {
   padding: 4px;
 }
+
 @media (max-width: 560px) {
-  .main {
+  .empty_state_squirrel_main {
     -webkit-transform: scale(0.75);
     transform: scale(0.75);
   }
 }
+
 @media (max-width: 420px) {
   .main {
     -webkit-transform: scale(0.5);
@@ -100,6 +81,7 @@ a:hover {
     overflow-x: auto;
   }
 }
+
 .squirrel {
   position: relative;
   width: 83px;
@@ -107,6 +89,7 @@ a:hover {
   margin-top: 130px;
   margin-left: 70px;
 }
+
 .squirrel .skin {
   position: absolute;
   top: 0;
@@ -116,6 +99,7 @@ a:hover {
   background: #f99c3c;
   border-radius: 0 55px 0 0;
 }
+
 .squirrel .ear {
   position: absolute;
   top: -25px;
@@ -123,14 +107,17 @@ a:hover {
   height: 25px;
   background: #f99c3c;
 }
+
 .squirrel .ear.left {
   left: -12.5px;
   border-radius: 25px 0 0 25px;
 }
+
 .squirrel .ear.right {
   left: 40px;
   border-radius: 0 25px 25px 0;
 }
+
 .squirrel .eye {
   position: absolute;
   top: 25px;
@@ -139,12 +126,15 @@ a:hover {
   background: #fefefe;
   border-radius: 25px;
 }
+
 .squirrel .eye.left {
   left: 12.5px;
 }
+
 .squirrel .eye.right {
   right: 12.5px;
 }
+
 .squirrel .eye span {
   position: absolute;
   top: 50%;
@@ -156,6 +146,7 @@ a:hover {
   background: #3a2012;
   border-radius: 13px;
 }
+
 .squirrel .belly {
   position: absolute;
   bottom: 0;
@@ -166,6 +157,7 @@ a:hover {
   background: #faba71;
   border-radius: 25px 25px 0 0;
 }
+
 .squirrel .nose {
   position: absolute;
   top: 51.5px;
@@ -176,6 +168,7 @@ a:hover {
   background: #3a2012;
   border-radius: 0 0 6px 6px;
 }
+
 .squirrel .mouth {
   position: absolute;
   top: 58px;
@@ -186,6 +179,7 @@ a:hover {
   background: #3a2012;
   border-radius: 0 0 12.5px 12.5px;
 }
+
 .squirrel .mouth .tooth {
   position: absolute;
   top: 0;
@@ -196,6 +190,7 @@ a:hover {
   background: #fefefe;
   border-radius: 0 0 7.5px 7.5px;
 }
+
 .squirrel .leg {
   position: absolute;
   bottom: 0;
@@ -204,12 +199,15 @@ a:hover {
   background: #3a2012;
   border-radius: 12.5px 12.5px 0 0;
 }
+
 .squirrel .leg.left {
   left: 12.5px;
 }
+
 .squirrel .leg.right {
   right: 12.5px;
 }
+
 .squirrel .tail {
   position: absolute;
   bottom: 0;
@@ -217,6 +215,7 @@ a:hover {
   width: 83px;
   height: 155px;
 }
+
 .squirrel .tail .square {
   position: absolute;
   top: 0;
@@ -226,7 +225,8 @@ a:hover {
   background: #d67b32;
   border-radius: 0 0 0 55px;
 }
-.squirrel .tail .square .sh {
+
+.squirrel .tail .square .tail_square_right {
   position: absolute;
   top: 0;
   right: 0;
@@ -237,6 +237,7 @@ a:hover {
   -webkit-box-shadow: inset -30px 0 30px -30px rgba(0, 0, 0, 0.2);
   box-shadow: inset -30px 0 30px -30px rgba(0, 0, 0, 0.2);
 }
+
 .squirrel .tail .circle {
   position: absolute;
   top: -75px;
@@ -251,6 +252,7 @@ a:hover {
   -webkit-box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
 }
+
 .squirrel .tail .circle::before {
   content: '';
   position: absolute;
@@ -261,6 +263,7 @@ a:hover {
   background: #ad6326;
   border-radius: 0 0 76px 0;
 }
+
 .squirrel .nut {
   position: absolute;
   bottom: 2.5px;
@@ -270,6 +273,7 @@ a:hover {
   background: #d47b33;
   border-radius: 12.5px 0 0 12.5px;
 }
+
 .squirrel .nut .hood {
   position: absolute;
   bottom: -2.5px;
@@ -279,6 +283,7 @@ a:hover {
   background: #3a2012;
   border-radius: 0 12.5px 12.5px 0;
 }
+
 .squirrel .nut .hood::before {
   content: '';
   position: absolute;
@@ -290,17 +295,20 @@ a:hover {
   background: #3a2012;
   border-radius: 0 0 7.5px 7.5px;
 }
+
 .squirrel .eye span {
   -webkit-animation: animation 10s infinite ease-in-out;
   animation: animation 10s infinite ease-in-out;
   -webkit-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
+
 .squirrel:hover .eye span {
   position: absolute;
   top: 65%;
   left: 65%;
 }
+
 @-webkit-keyframes animation {
   0%,
   4%,
