--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.bottom-right-panel{
+.bottom-right-panel {
   position: fixed;
   bottom: 10px;
   right: 10px;
@@ -8,6 +8,7 @@
   align-items: center;
   max-height: 50px;
   padding: 12px 0px;
+  box-sizing: border-box;
 }
 
 .bottom-right-panel-not-map {
@@ -23,5 +24,5 @@
 }
 
 .view-mode-active .icon .inner-icon {
-  background-color: #5F65FF;
+  background-color: #5f65ff;
 }
