--- a/src/components/MultiEditBar/MultiEditBar.css
+++ b/src/components/MultiEditBar/MultiEditBar.css
@@ -1,31 +1,31 @@
 /* Multi Edit Bar */
 
-.multi_edit_bar {
+.multi-edit-bar {
   position: fixed;
-  bottom: 0px;
+  bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
   padding: 0 8px;
   background-color: #ffffff;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-  border-radius: 10px 10px 0px 0px;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
   opacity: 1;
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 50px;
 }
 
-.multi_edit_bar > .icon {
+.multi-edit-bar > .icon {
   padding: 8px;
   width: 44px;
   height: 36px;
 }
 
-.multi_edit_bar .icon.medium.active .inner-icon {
+.multi-edit-bar .icon.active .inner-icon {
   background-color: #5f65ff;
 }
 
-.multi_edit_bar_item {
+.multi-edit-bar-item {
   width: 60px;
   height: 60px;
   box-sizing: border-box;
@@ -34,7 +34,7 @@
   align-items: center;
 }
 
-.multi_edit_bar .picker-popup {
-  bottom: 65px;
+.multi-edit-bar .picker-popup {
+  bottom: 60px;
   top: unset;
 }
