--- a/src/components/StatusIcon/StatusIcon.css
+++ b/src/components/StatusIcon/StatusIcon.css
@@ -1,51 +1,60 @@
 /* StatusIcon */
 
-.status_color {
+.status-color {
   position: relative;
 }
 
-.status_color_small {
+.status-color-small {
   width: 26px;
   height: 26px;
   margin: 6px 12px 6px 6px;
-  border-radius: 14px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.status_color_medium {
+.status-color-small-MultiEditBar {
+  margin: 6px;
+  box-sizing: border-box;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.status-color-medium {
   width: 38px;
   height: 38px;
-  border-radius: 19px;
+  border-radius: 50%;
   margin: 0 auto;
 }
 
-.status_color.can_click {
+.status-color.can-click {
   cursor: pointer;
 }
 
-.status_color_small.can_click:hover {
+.status-color-small.can-click:hover {
   width: 34px;
   height: 34px;
-  border-radius: 17px;
+  border-radius: 50%;
   margin: 2px 8px 2px 2px;
   border: none;
 }
 
-.status_color.can_click.hot-hoverable:hover {
+.status-color.can-click.not-hoverable:hover {
   width: 26px;
   height: 26px;
   margin: 6px 12px 6px 6px;
-  border-radius: 14px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.status_color.has_status {
+.status-color.has-status {
   box-shadow: 0 0 0 4px #fff, 0 0 0 6px #5f65ff;
 }
 
 /* Tooltips */
 
-.tooltip_container:hover .tooltip {
+.tooltip-container:hover .tooltip {
   display: block;
 }
 
