--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
@@ -12,10 +12,10 @@
   padding: 0 8px;
 }
 
-.custom-status-icon {
+.status-icon-activity-history {
   margin: 0px;
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
 }
 
 .history-Author {
