modified icon colors and code for ExpandedViewFooter + commented out undeveloped NavTab + improved overall styling

--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -98,6 +98,9 @@
   padding-right: 0;
 }
 
+.DateRangePicker_picker.DateRangePicker_picker_1.DateRangePicker_picker__directionLeft.DateRangePicker_picker__directionLeft_2 {
+  left: 0;
+}
 .DateRangePickerInput__withBorder {
   height: 373px;
 }
