--- a/src/components/ExpandedViewMode/ExpandedViewMode.css
+++ b/src/components/ExpandedViewMode/ExpandedViewMode.css
@@ -1,60 +1,61 @@
 .expanded_view_overlay {
-    background: rgba(31, 31, 31, 0.4);
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-y: hidden;
-    position: fixed;
-  }
-
-.expanded_view_wrapper {
-    box-shadow: 0px 0px 6px rgba(173, 157, 157, 0.16);
-    width: 500px;
-    min-height: 500px;
-    max-height: calc(100vh - 70px);
-    background: #FFFFFF;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .expanded_view_overlay .expanded_view_wrapper .small-close {
-    position: absolute;
-    top: 22px;
-    right: 22px;
-    cursor: pointer;
-  }
-
-  .expanded_view_main {
-    display: flex;
-    flex-direction: row;
+  background: rgba(31, 31, 31, 0.4);
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
+  position: fixed;
 }
 
-  .expanded_view_right_menu {
-      display: inline-block;
-  }
+.expanded_view_wrapper {
+  box-shadow: 0px 0px 8px rgba(173, 157, 157, 0.16);
+  width: 520px;
+  min-height: 500px;
+  max-height: calc(100vh - 70px);
+  background: #ffffff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
-  .expanded_view_header, .expanded_view_content, .expanded_view_footer {
-    display: inline-block;
-  }
+.expanded_view_overlay .expanded_view_wrapper .small-close {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+  cursor: pointer;
+}
 
-  
-  .goal_form textarea {
-    background-color: transparent;
-    border: 0;
-    outline: none;
-    margin: 24px 22px 25px 27px;
-    width: 309px;
-    height: 70px;
-    resize: none;
-    color: #4D4D4D;
-    font-family:'rennerbook', Helvetica, Sans-Serif;
-    font-size: 20px;
-    line-height: 24px;
-  }
+.expanded_view_main {
+  display: flex;
+  flex-direction: row;
+}
+
+.expanded_view_right_menu {
+  display: inline-block;
+}
+
+.expanded_view_header,
+.expanded_view_content,
+.expanded_view_footer {
+  display: inline-block;
+}
+
+.goal_form textarea {
+  background-color: transparent;
+  border: 0;
+  outline: none;
+  margin: 24px 22px 25px 27px;
+  width: 309px;
+  height: 70px;
+  resize: none;
+  color: #4d4d4d;
+  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-size: 20px;
+  line-height: 24px;
+}
