--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -11,6 +11,9 @@
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: contain;
   width: 100%;
   height: 100%;
 }
