--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -2,7 +2,7 @@
   font-family: 'rennerbook', Helvetica, Sans-Serif;
 }
 
-.comments > div:first-child {
+.comments_avatarANDInput_wrapper {
   display: flex;
 }
 
@@ -24,24 +24,29 @@
 }
 
 .input_comment_row {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100%;
 }
 
 .input_comment_wrapper {
   display: flex;
+  width: 100%;
+  position: relative;
+}
+
+.input_comment_wrapper textarea {
+  height: 36px;
 }
 
 .input_comment {
   height: 32px;
   box-sizing: border-box;
   border: 1.5px solid #d1d1d1;
-  border-radius: 15px;
-  padding: 15px;
+  border-radius: 18px;
   color: black;
-  padding: 10px;
+  padding: 10px 10px 10px 14px;
   margin-bottom: 10px;
   flex: 1;
   font-size: 13px;
@@ -54,11 +59,24 @@
 }
 
 .comment_save_button {
+  position: absolute;
+  right: 2px;
+  margin-top: 2px;
+}
+
+.comment_save_button > .icon .inner-icon {
+  background: #00beb0;
 }
 
 .avatar_comment_container {
   display: inline-block;
   margin-right: 10px;
+}
+
+.avatar_comment_container > .avatar {
+  height: 36px;
+  width: 36px;
+  border-radius: 50%;
 }
 
 .comment_history_item {
@@ -69,7 +87,7 @@
 .comment_history_info {
   display: flex;
   flex-direction: row;
-  margin-bottom: 6px;
+  margin-bottom: 7px;
 }
 
 .comment_history_name {
