--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -51,6 +51,7 @@
   resize: none;
   font-family: 'rennerbook', Helvetica, Sans-Serif;
   font-size: 14px;
+  line-height: 17px;
 }
 
 .expanded_view_description {
@@ -58,7 +59,7 @@
   border-radius: 15px;
   padding: 15px;
   color: #a3a3a3;
-  margin-bottom: 14px;
+  margin-bottom: 20px;
 }
 
 /* squirrels & timeframe wrapper */
