--- a/src/components/ValidatingFormInput/ValidatingFormInput.css
+++ b/src/components/ValidatingFormInput/ValidatingFormInput.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  font-family: 'rennerbook'
+  font-family: 'rennerbook';
 }
 
 .validating_form_input label {
@@ -30,7 +30,7 @@
 }
 
 .validating_form_input .input_wrapper input {
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
   outline: none;
   font-size: 14px;
   line-height: 16px;
@@ -50,4 +50,7 @@
   position: absolute;
   top: 13px;
   left: 12px;
+}
+.error_text {
+  color: red;
 }
