--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -181,9 +181,11 @@
 }
 
 .avatar_container img {
-  border-radius: 50%;
-  height: 36px;
   width: 36px;
+  height: 36px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
 }
 
 .top-right-panel div .avatar_container + span {
