--- a/src/components/IndentedTreeView/IndentedTreeView.css
+++ b/src/components/IndentedTreeView/IndentedTreeView.css
@@ -46,14 +46,41 @@
 .indented-view-goal-content {
   margin-left: 6px;
   cursor: pointer;
-  padding: 8px;
+  padding: 7px;
   border-radius: 10px;
   flex: 1;
+  text-decoration: none;
+  color: #4d4d4d;
+  display: flex;
+  transition: all 0.2s;
+}
+
+.indented-view-goal-content-text {
+  text-decoration: none;
+  color: #4d4d4d;
+  padding-left: 4px;
+  transition: all 0.2s;
 }
 
 .indented-view-goal-content:hover {
-  color: #00A599;
-  background: #F9F9F9;
+  color: #00a599;
+  background: #f9f9f9;
+}
+
+.indented-view-goal-content:hover > .indented-view-goal-content-text {
+  color: #00a599;
+}
+
+.indented-view-goal-content:active > .indented-view-goal-content-text,
+.indented-view-goal-content:focus > .indented-view-goal-content-text {
+  color: #5f65ff;
+}
+
+.indented-view-goal-content:active,
+.indented-view-goal-content:focus {
+  color: #5f65ff;
+  background: #f9f9f9;
+  font-family: 'rennerbold';
 }
 
 .indented-view-nested-goal {
