--- a/src/routes/CreateProfilePage/CreateProfilePage.css
+++ b/src/routes/CreateProfilePage/CreateProfilePage.css
@@ -1,7 +1,7 @@
 .create_profile_page {
   width: 100%;
   height: 100vh;
-  background: #FFFFFF;
+  background: #ffffff;
   display: flex;
   flex-direction: row;
 }
@@ -22,9 +22,8 @@
 }
 
 @media only screen and (max-height: 800px) {
-
   .validating_form_input {
-    margin-bottom: 22px;
+    margin-bottom: 35px;
   }
 
   .profile_edit_form_title {
@@ -34,5 +33,4 @@
   .profile_edit_form h4 {
     margin-top: 12px;
   }
-
 }
