created altert popups for MultiEditBar functions for multiple selected cards + improved/fixed display of metadata on GoalForm

--- a/src/components/MultiEditBar/MultiEditBar.css
+++ b/src/components/MultiEditBar/MultiEditBar.css
@@ -43,3 +43,7 @@
   bottom: 60px;
   top: unset;
 }
+
+.archive-popup.alert-popup-wrapper .alert-popup-header .inner-icon {
+  background-color: #ff5d36;
+}
