--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -31,3 +31,53 @@
 .avatar.highlighted {
   box-shadow: 0 0 0 2px #5f65ff;
 }
+
+/* initals-avatar stylings */
+
+.initials-avatar text {
+}
+
+.initials-avatar {
+  cursor: pointer;
+  color: white;
+  text-align: center;
+  height: inherit;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.initials-avatar.clickable {
+  cursor: pointer;
+}
+
+.initials-avatar.small {
+  height: 24px;
+  width: 24px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.initials-avatar.medium {
+  height: 32px;
+  width: 32px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.initials-avatar.medium-large {
+  height: 36px;
+  width: 36px;
+  object-fit: cover;
+}
+
+.initials-avatar.large {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+}
+
+.initials-avatar.highlighted {
+  box-shadow: 0 0 0 2px #5f65ff;
+}
