guidebook code improvements + styling improvements

--- a/src/components/AlertPopupTemplate/AlertPopupTemplate.css
+++ b/src/components/AlertPopupTemplate/AlertPopupTemplate.css
@@ -82,6 +82,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
   font-size: 12px;
-  font-family: 'rennerbold', Helvetica, sans-serif;
+  font-family: 'CircularStd-Bold', Helvetica, sans-serif;
   margin-bottom: 10px;
 }
