--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   margin: 0;
-  font-family: 'renner_mediummedium';
+  font-family: 'CircularStd-Medium';
   font-size: 11px;
   padding: 0;
   color: #00beb0;
