--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ActivityHistory/ActivityHistory.css
@@ -20,7 +20,7 @@
 
 .history-Author {
   color: #4e566f;
-  font-family: 'renner_mediummedium', Arial, Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Arial, Helvetica, sans-serif;
 }
 
 .history-info {
