--- a/src/components/ListExport/Popup/popup.css
+++ b/src/components/ListExport/Popup/popup.css
@@ -52,7 +52,7 @@
 
 .popup-title {
   font-size: 22px;
-  font-family: 'rennerbold', Helvetica, sans-serif;
+  font-family: 'CircularStd-Bold', Helvetica, sans-serif;
   font-weight: normal;
 }
 
