--- a/src/components/PickerTemplate/PickerTemplate.css
+++ b/src/components/PickerTemplate/PickerTemplate.css
@@ -17,7 +17,7 @@
 
 .picker-popup-heading {
   font-size: 16px;
-  font-family: 'rennerbold';
+  font-family: 'CircularStd-Bold';
   color: #717171;
   text-align: center;
   margin-bottom: 20px;
