--- a/src/components/PriorityGoal/PriorityGoal.css
+++ b/src/components/PriorityGoal/PriorityGoal.css
@@ -28,7 +28,7 @@
   flex-direction: row;
   padding-bottom: 12px;
   padding-right: 30px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
