--- a/src/components/PriorityQuadrant/PriorityQuadrant.css
+++ b/src/components/PriorityQuadrant/PriorityQuadrant.css
@@ -10,7 +10,7 @@
   text-align: left;
   font-size: 20px;
   line-height: 29px;
-  font-family: 'rennerbold', Helvetica, sans-serif;
+  font-family: 'CircularStd-Bold', Helvetica, sans-serif;
   font-weight: normal;
   margin-bottom: 10px;
   margin-left: 16px;
