--- a/src/components/ProfileEditForm/ProfileEditForm.css
+++ b/src/components/ProfileEditForm/ProfileEditForm.css
@@ -21,7 +21,7 @@
   font-size: 20px;
   line-height: 24px;
   color: #4d4d4d;
-  font-family: 'gilroyextrabold', 'rennerbold', Helvetica, sans-serif;
+  font-family: 'gilroyextrabold', 'CircularStd-Bold', Helvetica, sans-serif;
   font-weight: normal;
   letter-spacing: 0.5px;
 }
