--- a/src/components/Zoom/Zoom.css
+++ b/src/components/Zoom/Zoom.css
@@ -11,7 +11,7 @@
 
 .zoom-wrapper span {
   font-size: 16px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-weight: normal;
   margin-right: 20px;
   width: 44px;
