--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -1,9 +1,11 @@
 .comments {
-  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-book', Helvetica, Sans-Serif;
 }
 
 .comments_avatarANDInput_wrapper {
   display: flex;
+  align-items: center;
+  margin-bottom: 16px;
 }
 
 .comment_history_container_scrollable {
@@ -24,7 +26,6 @@
 }
 
 .input_comment_row {
-  margin-bottom: 16px;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -40,17 +41,20 @@
   height: 36px;
 }
 
+textarea.input_comment {
+  height: 36px;
+}
+
 .input_comment {
   height: 32px;
   box-sizing: border-box;
-  border: 1.5px solid #d1d1d1;
+  border: 1.2px solid #d1d1d1;
   border-radius: 18px;
   color: black;
   padding: 10px 10px 10px 14px;
-  margin-bottom: 10px;
   flex: 1;
   font-size: 13px;
-  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
   resize: none;
 }
 
@@ -62,6 +66,10 @@
   position: absolute;
   right: 2px;
   margin-top: 2px;
+}
+
+.comment_save_button > .icon {
+  padding: 4px;
 }
 
 .comment_save_button > .icon .inner-icon {
@@ -94,7 +102,7 @@
   color: #4e566f;
   font-size: 10px;
   line-height: 13px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   margin-right: 10px;
 }
 
