--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -46,7 +46,7 @@
   border-radius: 10px;
   padding: 5px 4px 4px 10px;
   width: 95%;
-  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
   font-weight: normal;
 }
 
@@ -74,7 +74,7 @@
   display: flex;
   align-items: center;
   margin: 0;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-size: 11px;
   padding: 0;
   color: #00beb0;
@@ -86,7 +86,7 @@
 
 .DateRangePickerInput_clearDates {
   right: -36px;
-  width: 70px;
+  width: 72px;
   top: unset;
   right: unset;
   left: 0;
@@ -136,13 +136,13 @@
 
 .CalendarMonth_caption {
   font-size: 14px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-weight: normal;
   padding-bottom: 42px;
 }
 
 .DayPicker_weekHeader {
-  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
   font-weight: normal;
 }
 
