--- a/src/components/ExpandedViewMode/ExpandedViewMode.css
+++ b/src/components/ExpandedViewMode/ExpandedViewMode.css
@@ -75,7 +75,7 @@
   height: 70px;
   resize: none;
   color: #4d4d4d;
-  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-book', Helvetica, Sans-Serif;
   font-size: 20px;
   line-height: 24px;
 }
