--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewModeContent.css
@@ -19,7 +19,7 @@
   color: #4d4d4d;
   font-size: 22px;
   padding: 0;
-  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-book', Helvetica, Sans-Serif;
 }
 
 .expanded_view_title textarea {
@@ -29,7 +29,7 @@
   color: #4d4d4d;
   font-size: 22px;
   padding: 0;
-  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-book', Helvetica, Sans-Serif;
   resize: none;
 }
 
@@ -49,7 +49,7 @@
   outline: none;
   border: 0;
   resize: none;
-  font-family: 'rennerbook', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-book', Helvetica, Sans-Serif;
   font-size: 14px;
   line-height: 17px;
 }
@@ -127,7 +127,7 @@
 .squirrel-info-popup-name {
   flex: 1;
   padding: 1px 0px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-size: 14px;
   color: #5f65ff;
   margin-bottom: 6px;
@@ -145,14 +145,14 @@
 .squirrel-info-popup-handle {
   font-size: 12px;
   color: #a3a3a3;
-  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
 }
 
 .remove-squirrel-btn {
   color: #00beb0;
   font-size: 12px;
   padding-top: 6px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   cursor: pointer;
 }
 
@@ -168,7 +168,7 @@
   border-radius: 10px;
   padding: 8px 12px;
   font-size: 12px;
-  font-family: 'renner_mediummedium', Helvetica, Sans-Serif;
+  font-family: 'CircularStd-Medium', Helvetica, Sans-Serif;
   cursor: pointer;
 }
 
