--- a/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewNavBar/ExpandedViewNavBar.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeContent/ExpandedViewNavBar/ExpandedViewNavBar.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   font-size: 12px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   font-weight: normal;
   cursor: pointer;
   border-bottom: 3px solid transparent;
