--- a/src/components/ExpandedViewMode/ExpandedViewModeFooter/ExpandedViewModeFooter.css
+++ b/src/components/ExpandedViewMode/ExpandedViewModeFooter/ExpandedViewModeFooter.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   font-size: 11px;
-  font-family: 'rennerbook', Helvetica, sans-serif;
+  font-family: 'CircularStd-book', Helvetica, sans-serif;
   font-weight: normal;
   padding: 10px 20px;
   justify-content: space-between;
