--- a/src/components/PriorityPicker/PriorityPicker.css
+++ b/src/components/PriorityPicker/PriorityPicker.css
@@ -15,7 +15,7 @@
 
 .priority_tab {
   padding: 10px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   cursor: pointer;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .aggregated_priority_title {
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   margin-bottom: 10px;
 }
 
@@ -62,7 +62,7 @@
 .priority_item_title {
   width: 90px;
   font-size: 14px;
-  font-family: 'renner_mediummedium', Helvetica, sans-serif;
+  font-family: 'CircularStd-Medium', Helvetica, sans-serif;
   color: #4d4d4d;
 }
 
